# JordanPavlic.github.io

./: CNAME  README.md  archives.html  authors.html  categories.html  index.html  my-first-review.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
author/: jordan-pavlic.html
category/: review.html
