[tool.poetry]
name = "jordanpavlic.github.io"
version = "0.1.0"
description = "A personal website for blogging, showing off my work, and other stuff"
authors = ["Jordan Pavlic <jpavlic92@gmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.8.0"}
ghp-import = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
